--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="app">
     <header class="header">
       <h1>🦁 Singapore MBTI Quiz <span class="flag">🇸🇬</span></h1>
-      <p class="sub">Find your personality — with kopi, chope tissue &amp; Singlish vibes. <span class="age">For ages 14–45</span></p>
+      <p class="sub">Find your personality — with kopi, memes &amp; Singlish vibes. Not affiliated with Myers-Briggs®</p>
     </header>
 
     <main>
@@ -25,14 +25,7 @@
       <section id="screen-start" class="screen show">
         <div class="card big">
           <h2>Ready to find your type?</h2>
-          <p>15 fast questions. 4 choices each. Super relatable. Super shareable.</p>
-          <ul class="ticks">
-            <li>⚡ Quick &amp; fun</li>
-            <li>🎯 Accurate enough to spark debates</li>
-            <li>📱 Download a result card for IG / TikTok / WhatsApp</li>
-          </ul>
-          <button id="btn-start" class="btn primary">Start Quiz</button>
-          <a class="btn ghost" href="types.html">All Personality Types</a>
+          <button id="btn-start" class="btn primary">Let's Go!</button>
         </div>
       </section>
 
@@ -60,15 +53,11 @@
           </div>
           <div class="share-cta">
             <button id="btn-share" class="btn outline">📣 Share</button>
-            <small>Tip: Post to IG Stories / TikTok, or drop into WhatsApp/Telegram.</small>
           </div>
         </div>
       </section>
     </main>
-
     <footer class="footer">
-      <p>Made for Singaporeans who love kopi, memes &amp; good vibes. Not affiliated with Myers-Briggs®.</p>
-      <a href="types.html">See all 16 types</a>
     </footer>
   </div>
 </body>
