--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <div class="app">
     <header class="header">
       <h1>🦁 Singapore MBTI Quiz <span class="flag">🇸🇬</span></h1>
-      <p class="sub">Find your personality — with kopi, memes &amp; Singlish vibes. Not affiliated with Myers-Briggs®</p>
+      <p class="sub">Come find your personality type with Singlish vibes and share with your friends lah! <br></br>
+	      Not affiliated with Myers-Briggs®</p>
     </header>
 
     <main>
@@ -50,9 +51,6 @@
             <button id="btn-download" class="btn primary">⬇️ Download Result</button>
             <a class="btn ghost" href="types.html">📚 All Personality Types</a>
             <button id="btn-again" class="btn">🔁 Take Again</button>
-          </div>
-          <div class="share-cta">
-            <button id="btn-share" class="btn outline">📣 Share</button>
           </div>
         </div>
       </section>
