--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Singapore MBTI Quiz 🇸🇬</title>
-  <meta name="description" content="A hilarious Singapore-flavoured MBTI quiz. Find your 16-personality nickname and share your result card!">
+  <meta name="description" content="A hilarious Singapore-flavoured MBTI quiz. Find your 16-personality nickname and share your result!">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
